base html hotfix

--- a/fitjacket/accounts/templates/base.html
+++ b/fitjacket/accounts/templates/base.html
@@ -28,7 +28,7 @@
   <a href="{% url 'dashboard' %}" class="sidebar-link">Dashboard</a>
   <a href="{% url 'workouts_home' %}" class="sidebar-link">Workouts</a>
   <a href="#" class="sidebar-link">View Progress</a>
-  <a href="#" class="sidebar-link">Set Reminders</a>
+  <a href="{% url 'reminders' %}" class="sidebar-link">Set Reminders</a>
 
   <!-- Wellness Section -->
   <div class="sidebar-section-title">Wellness</div>
