--- a/fitjacket/workouts/templates/workouts/workouts_home.html
+++ b/fitjacket/workouts/templates/workouts/workouts_home.html
@@ -7,7 +7,7 @@
 
   <!-- View Workout Log Button -->
   <div class="text-center mb-5">
-    <a href="{% url 'workout_log' %}" class="btn btn-outline-primary">
+    <a href="{% url 'workouts:workout_log' %}" class="btn btn-outline-primary">
       View Workout Log
     </a>
   </div>
