--- a/fitjacket/accounts/templates/base.html
+++ b/fitjacket/accounts/templates/base.html
@@ -30,7 +30,7 @@
   <div class="sidebar-section-title">Fitness</div>
   <a href="{% url 'dashboard' %}" class="sidebar-link">Dashboard</a>
   <a href="{% url 'workouts:workouts_home' %}" class="sidebar-link">Workouts</a>
-  <a href="#" class="sidebar-link">View Progress</a>
+  <a href="{% url 'workouts:performance_analytics' %}" class="sidebar-link">Performance</a>
   <a href="{% url 'workouts:reminders' %}" class="sidebar-link">Set Reminders</a>
 
   <!-- Wellness Section -->
