--- a/fitjacket/accounts/templates/accounts/dashboard.html
+++ b/fitjacket/accounts/templates/accounts/dashboard.html
@@ -27,7 +27,7 @@
   <!-- Groups -->
   <div class="sidebar-section-title">Fitness</div>
   <a href="{% url 'workouts:workouts_home' %}" class="sidebar-link">Workouts</a>
-  <a href="#" class="sidebar-link">View Progress</a>
+  <a href="{% url 'workouts:performance_analytics' %}" class="sidebar-link">Performance</a>
   <a href="{% url 'workouts:reminders' %}" class="sidebar-link">Set Reminders</a>
 
   <div class="sidebar-section-title">Wellness</div>
