--- a/fitjacket/workouts/templates/workouts/add_meal.html
+++ b/fitjacket/workouts/templates/workouts/add_meal.html
@@ -39,7 +39,7 @@
                         
                         <div class="d-grid gap-2">
                             <button type="submit" class="btn btn-primary">Save Meal</button>
-                            <a href="{% url 'nutrition_tracking' %}" class="btn btn-outline-secondary">Cancel</a>
+                            <a href="{% url 'workouts:nutrition_tracking' %}" class="btn btn-outline-secondary">Cancel</a>
                         </div>
                     </form>
                 </div>
